Fix: Create overflow container for long nums

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 #calc-title {
     color: #614852;
     text-align: right;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
 #display-container {
@@ -43,11 +43,12 @@ body {
     color: #2B2F3D;
     border: 2px solid white;
     padding: 16px 24px;
-    font-size: 42px;
+    font-size: 40px;
     text-align: right;
     border-radius: 12px;
     box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.25);
     font-family: 'Orbitron', sans-serif;
+    overflow: auto;
 }
 
 #button-container {
